<resources>
    <string name="app_name">Viaje app</string>
    <string name="item_perfil">Perfil</string>
    <string name="item_usuarios">Usuarios</string>
    <string name="item_chats">Chats</string>
    <string name="item_publicaciones">Publicaciones</string>
    <string name="item_recomendaciones">Recomendaciones</string>
    <string name="tv_Titulo">Titulo</string>
    <string name="opcionEmail">Continuar con Email</string>
    <string name="opcionGoogle">Continuar con Google</string>

    <string name="txt_login">Login</string>
    <string name="et_Email">Correo Electronico</string>
    <string name="et_Password">Contraseña</string>
    <string name="btn_Ingresar">Ingresar</string>
    <string name="et_Registrarme">Registrarme</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>

    <string name="txt_Registro">Registro</string>
    <string name="et_Nombres">Nombres</string>
    <string name="et_R_Password">Repita la contraseña</string>
    <string name="btn_Registrar">Registrar</string>

    <string name="btn_CerrarSesion">Cerrar Sesion</string>
    <string name="btn_ActualizarInfo">Actualizar</string>

    <string name="txt_nombres">Nombres: </string>
    <string name="tv_nombres"> -- </string>
    <string name="txt_email">Email: </string>
    <string name="tv_email"> -- </string>
    <string name="txt_proveedor">Proveedor</string>
    <string name="tv_proveedor"> -- </string>
    <string name="txt_t_registro">Miembro desde: </string>
    <string name="tv_t_registro"> -- </string>

    <string name="txt_titulo_edit">Editar Información: </string>

    <string name="btn_Actualizar">Actualizar Informacion: </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>