<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".LoginEmailActivity">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_login"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="20sp"/>

    <ImageView
        android:src="@drawable/login_usuario"
        android:layout_marginTop="15dp"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

    <!--Email -->
    
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        
        <EditText
            android:id="@+id/et_Email"
            android:hint="@string/et_Email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--Contraseña-->

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_Password"
            android:hint="@string/et_Password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Ingresar"
        android:text="@string/btn_Ingresar"
        android:textAllCaps="true"
        app:cornerRadius="8dp"
        android:layout_marginTop="15dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/no_tienes_cuenta"
        android:text="@string/no_tienes_cuenta"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/et_Registrarme"
        android:text="@string/et_Registrarme"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>