<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarInformacion">
    
    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <ImageButton
            android:id="@+id/Ib_Regresar"
            android:src="@drawable/icono_regresar"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/txt_titulo_edit"
            android:id="@+id/txt_titulo_edit"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:background="#cccccc"
            android:layout_height="1dp"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/perfilRL"
                android:layout_centerHorizontal="true"
                android:layout_width="120dp"
                android:layout_height="120dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="120dp"
                    android:id="@+id/iv_Perfil"
                    android:src="@drawable/img_perfil"
                    android:scaleType="centerCrop"
                    android:layout_height="120dp"/>

                <ImageView
                    android:id="@+id/ivEditarImg"
                    android:src="@drawable/icono_editar"
                    android:layout_alignParentEnd="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TILNombres"
                android:layout_marginTop="10dp"
                android:layout_below="@id/perfilRL"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_nombres"
                    android:text="@string/txt_nombres"
                    android:inputType="textPersonName|textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_below="@id/TILNombres"
                android:text="@string/btn_Actualizar"
                android:id="@+id/btn_Actualizar"
                android:layout_marginTop="10dp"
                android:textAllCaps="true"
                app:cornerRadius="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>


    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>